--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,7 @@
 destination: ./_site
-auto:        true
-lsi:         false
-server_port: 3000
-pygments:    true
-markdown:    maruku
-permalink:   /:year/:month/:title
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_dir:    images/latex
-  png_url:    /images/latex
+lsi: false
+port: 3000
+pygments: true
+markdown: redcarpet
+permalink: /:year/:month/:title
+excerpt_separator: asdasdadads
